--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Group of Architects
 <P>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</P>
 <button class="bnt-primary">Explore More</button>
 </div>
-<img src="images/banner.png">
+<div class="banner-image-container"><img src="images/banner.png"></div>
 </div>
   </header>  
   <main>
