--- a/index.html
+++ b/index.html
@@ -28,11 +28,33 @@ Group of Architects
 <P>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</P>
 <button class="bnt-primary">Explore More</button>
 </div>
-<div class="banner-image-container"><img src="images/banner.png"></div>
+<div class="banner-image-container"><img class="banner-image" src="images/banner.png"></div>
 </div>
   </header>  
+  <!--team features-->
   <main>
+<section class="teams display-flex">
+<div class="team-image-container">
+  <div class="display-flex">
+<img src="images/team1.png">
+<img src="images/team2.png">
+</div>
+<div class="display-flex">
+<img src="images/team3.png">
+<img src="images/team4.png">
+</div>
+</div>
+<div class="our-features">
+  <div class="features-content">
+  <h3 class="features-title"><span id="quick-list" class="text-light-gray">Quick list</span><span> of Our</span> <br><span class="text-primary">Features</span></h3>
+  <p class="features-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+  <div>
+<button class="bnt-primary">Explore More</button>
+</div>
+</div>
+</div>
 
+</section>
   </main>
   <footer>
     
