--- a/index.html
+++ b/index.html
@@ -46,13 +46,22 @@ Group of Architects
 </div>
 <div class="our-features">
   <div class="features-content">
-  <h3 class="features-title"><span id="quick-list" class="text-light-gray">Quick list</span><span> of Our</span> <br><span class="text-primary">Features</span></h3>
+  <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span><span> of Our</span> <br><span class="text-primary">Features</span></h3>
   <p class="features-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
   <div>
 <button class="bnt-primary">Explore More</button>
 </div>
 </div>
 </div>
+</section>
+
+<!--enjoy features-->
+<section >
+<h3 class="section-title"></h3>
+</section>
+
+<!--some facts-->
+<section>
 
 </section>
   </main>
