--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Group of Architects
 <!--enjoy features-->
 <section >
 <h3 class="section-title">Some Facts</h3>
-<p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+<p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
 
 <div class="facts-container">
 
@@ -96,8 +96,18 @@ Group of Architects
 </section>
 
 <!--some facts-->
-<section class="some facts">
-
+<section class="our sponsors">
+<div class="sponsor-info">
+  <h3>Ours Sponsors</h3>
+  <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+</div>
+<div class="sponsor-companies">
+<img src="images/sponsors/spotify.png">
+<img src="images/sponsors/amazon.png">
+<img src="images/sponsors/google.png">
+<img src="images/sponsors/telerama.png">
+<img src="images/sponsors/figma.png">
+</div>
 </section>
   </main>
   <footer>
