--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Group of Architects
 </div>
 </section>
 
-<!--enjoy features-->
+<!-- features section-->
 <section >
 <h3 class="section-title">Some Facts</h3>
 <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -73,7 +73,7 @@ Group of Architects
   <div>
   <img src="images/icons/projects.png" alt="" class="fact-icon">
   <h4 class="fact-number">1458</h4>
-  <h5 class="fact-name">Projects Finish </h5>>
+  <h5 class="fact-name">Projects Finish </h5>
   </div>
 </div>
 <div class="fact-card display-flex">
@@ -95,6 +95,47 @@ Group of Architects
 
 </section>
 
+<!--enjoy feature-->
+<section class="feature">
+<div>
+<h2 id="feature-section-title" class="section-title" >Features you will <br>love & enjoy</h2>
+<p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+</div>
+
+<!--feature card container-->
+<section class="features display-flex">
+<div class="feature-card ">
+  <h4 class="feature-title">Dexktop & Mobile Version</h4>
+<p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+<div class="feature-card">
+  <h4 class="feature-title">Drag & Drop Builder</h4>
+<p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+<div class="feature-card">
+  <h4 class="feature-title">Awesome Modern Design</h4>
+<p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+<section class="feature-card">
+  <h4 class="feature-title">Super Easy to Edit</h4>
+<p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</section>
+</div>
+
+<div class="feature-architect">
+<img src="images/architect.png">
+<button id="experience-badge" class="bnt-primary">
+  <span id="experience-years">10+Years</span>
+  <br>
+  <span>Experience</span>
+</button>
+</div>
+</section>
+
+
+
+
+
 <!--some facts-->
 <section class="our sponsors">
 <div class="sponsor-info">
@@ -110,8 +151,8 @@ Group of Architects
 </div>
 </section>
   </main>
-  <footer>
-    
+  <footer class="bg-light">
+    <p class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
   </footer>
 </body>
 </html>
